Tue Jan  5 11:47:23 2016  Damir Gaynetdinov  <damir.gaynetdinov@gmail.com>

	* doc/marshal.rdoc: Clarify object references example, that the
	  reference is same object.  [Fix GH-1156]

Tue Jan  5 05:06:51 2016  Eric Wong  <e@80x24.org>

	* ext/stringio/stringio.c (strio_binmode): implement to set encoding
	* test/stringio/test_stringio.rb (test_binmode): new test
	  [ruby-core:72699] [Bug #11945]

Mon Jan  4 15:44:37 2016  Sho Hashimoto  <sho-h@ruby-lang.org>

	* variable.c (rb_mod_deprecate_constant): [DOC] added
	  documentation for Module#deprecate_constant. [ci skip]

Mon Jan  4 15:36:38 2016  Sho Hashimoto  <sho-h@ruby-lang.org>

	* thread_sync.c: [DOC] remove SizedQueue#close argument.
	  [ci skip]

Mon Jan  4 12:07:00 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* version.h (RUBY_BUILD_VERSION_STR_3): Workaround for old version of
	  Fujitsu C Compiler (fcc) on Solaris. [Bug #11944] [ruby-dev:49468]

Mon Jan  4 10:14:24 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/coverage/test_coverage.rb: ignored test when enabled to coverage.
	  It lead to crash with `make test-all`.

Mon Jan  4 08:10:44 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* insns.def (opt_case_dispatch): Move a comment to the
	  appropriate position.
	  [ci skip]

Sun Jan  3 23:55:13 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems/security.rb (DIGEST_ALGORITHM, KEY_ALGORITHM):
	  should check same name as the used constants.
	  [ruby-core:72674] [Bug #11940]

Sun Jan  3 19:22:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* aclocal.m4: add fallback file for non-aclocal environments.
	  [ruby-core:72683] [Bug #11942]

Sun Jan  3 13:56:49 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* eval_error.c (rb_print_undef): Use `rb_method_visibility_t`
	  instead of `int`.
	* eval_intern.h (rb_print_undef): ditto
	* proc.c (mnew_internal): ditto
	* vm_method.c (rb_export_method): ditto
	  [Misc #11649] [ruby-core:71311] [fix GH-1078]
